--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <!-- google font -->
-
     <!-- style sheet -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1 class="heading">Counter App!</h1>
     <div class="container">
       <h1 id="num">0</h1>
       <div class="btns">
